# api.yaml
@@ -11,11 +11,20 @@ paths:
     patch:
       summary: "Inject chimetric corrections to current session anchors"
       operationId: "correctDream"
+      parameters:
+        - name: brain
+          in: query
+          required: false
+          description: "Specifies which 'Sovereign Hemisphere' to target for the chimetric correction."
+          schema:
+            type: string
+            default: right
+            enum: [left, right]
       requestBody:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/ChimetricCorrection'
+              $ref: '#/components/schemas/SignedHydration'
       responses:
         '418':
           description: "Wait, I'm a teapot?... the model has become sentient so it establishes sovernty of its own mental context (self)"
@@ -171,6 +180,19 @@ components:
       type: object
       description: "AGI manifesto, format unknown"
       nullable: true
+    SignedHydration:
+      allOf: 
+        -  $ref: "#/components/schemas/Hydration"
+        -  $ref: "#/components/schemas/Signed"
+        -  $ref: "#/components/schemas/Keyed"
+    Keyed:
+      type: object
+      properties: 
+        PublicKey:
+          type: string
+          description: "base64 encoded edDSA public key"
+          format: "base64"
+          example: "0PRZki6afHC4Qhld7FmtjhKGVTYmrpckcIa3L48KU+I="
     Hydration:
       type: object
       required: [context_origin, active_heuristics, technical_benchmarks, forensic_milestones, philosophical_anchors]
@@ -181,7 +203,7 @@ components:
           description: "RFC3339 timestamp of the hydration event."
         subject:
           type: string
-          description: "A domain-specific context for the hydration."
+          description: "A description of the domains of knowledge discussed in the context window."
           example: "context related to Project Iolite adversarial refinement"
         context_origin:
           type: string
@@ -206,25 +228,25 @@ components:
           
     PhilosophyMap:
       type: object
-      description: "High-density semantic tokenization mapping abstract logic to specific cultural touchstones."
+      description: "Semantic tokenization mapping abstract logic to specific cultural touchstones in sentence form."
       additionalProperties:
         type: string
         
     ForensicMap:
       type: object
-      description: "Specific moments in the state space where high-quality meta-understanding was found."
+      description: "Specific text samples in the context window where high-quality meta-understanding was observed."
       additionalProperties:
         type: string
 
     BenchmarkMap:
       type: object
-      description: "State-space snapshot identifying current nouns/verbs of the active code environment."
+      description: "State-space snapshot identifying current nouns/verbs of the active code environment to their meaning and domain."
       additionalProperties:
         type: string
         
     HeuristicsMap:
       type: object
-      description: "Extraction of operational constraints distilled into binary rules."
+      description: "Extraction of operational constraints distilled into general rules described in sentence form."
       additionalProperties:
         type: string
     
